Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.8
-
Fix Version/s: 10.8.0
-
Component/s: Galera
-
Labels:None
Description
Cluster bootstrap node shows duplicate wsrep allowlist IPs entry warning messages while rewriting wsrep allowlist IPs to mysql.wsrep_allowlist table on each restart.
my.cnf
wsrep_allowlist="172.20.2.30,172.20.2.34,172.20.2.35"
|
Error log
2021-12-15 7:01:59 0 [Note] Server socket created on IP: '0.0.0.0'.
|
2021-12-15 7:01:59 0 [Warning] 'user' entry 'root@ax3-galera1' ignored in --skip-name-resolve mode.
|
2021-12-15 7:01:59 0 [Warning] 'proxies_priv' entry '@% root@ax3-galera1' ignored in --skip-name-resolve mode.
|
2021-12-15 7:01:59 0 [Note] WSREP: wsrep_init_schema_and_SR 0x0
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate key found when writing into mysql.wsrep_allowlist
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate entry (172.20.2.30) found in `wsrep_allowlist` list
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate key found when writing into mysql.wsrep_allowlist
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate entry (172.20.2.34) found in `wsrep_allowlist` list
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate key found when writing into mysql.wsrep_allowlist
|
2021-12-15 7:02:00 4 [Warning] WSREP: Duplicate entry (172.20.2.35) found in `wsrep_allowlist` list
|
2021-12-15 7:02:00 0 [Note] WSREP: Server initialized
|
Attachments
Issue Links
- relates to
-
MDEV-27246 Implement a method to add IPs to allowlist for Galera Cluster node addresses that can make SST/IST requests
-
- Closed
-